adapation to IE and Safari

--- a/views/layout.html
+++ b/views/layout.html
@@ -4,13 +4,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Web Conferencing</title>
-<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" />
-<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" />
-<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css' />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" />
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css" />
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css" />
+<link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+<link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' />
+<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css' />
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
 <link rel="styleSheet" href="stylesheets/jquery-ui.css" type="text/css" media="all">
 <link rel="styleSheet" href="stylesheets/layout-default.css" type="text/css" media="screen">
 <link rel="styleSheet" href="stylesheets/style.css" type="text/css" media="screen">
@@ -21,8 +21,9 @@
     <script type="text/javascript" src="./js/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="./js/jquery-ui.js"></script>
     <script type="text/javascript" src="./js/jquery.layout.js"></script>
-	<script src="./bower_components/adapter.js/adapter.js"></script>
-	<script src="./bower_components/kurento-utils/js/kurento-utils.js"></script>
+    <script src="https://cdn.temasys.com.sg/adapterjs/0.11.x/adapter.debug.js"></script>
+<!-- 	<script src="./bower_components/adapter.js/adapter.js"></script> -->
+	<script src="./js/kurento-utils.js"></script>
 	<script src="./js/conferenceroom.js"></script>
 	<script src="./js/participant.js"></script>
 	<script src="./js/kurento-utils.js"></script>
